--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -63,7 +63,13 @@
   <p>{{ product.description }}</p>
 </div>
 
+<!-- Shopify product form -->
 {% form 'product', product %}
+  <!--
+    * HIDDEN PRODUCT VARIANT SELECTOR input to replace with custom radio buttons.
+    1) Listen for radio button changes
+    2) Selet the hidden-product-variant-input.value = matchedVariant.id
+  -->
   <input
     type="hidden"
     name="id"
@@ -71,17 +77,21 @@
     id="hidden-product-variant-input"
   >
 
+  <!-- * Input of PRODUCT QUANTITY SELECTOR -->
   <div>
     <label for="quantity">Quantity</label>
     <input id="quantity" name="quantity" value="1" class="quantity-product">
   </div>
 
+  <!--
+    * Custom VARIANT SELECTOR radio buttons
+    Loop product.options_with_values to display custom radio buttons
+  -->
   {% if product.variants.size > 1 %}
     <div class="product-options">
       {% for option in product.options_with_values -%}
         <fieldset>
           <legend>{{ option.name }}</legend>
-
           {% for value in option.values %}
             <div>
               <input
@@ -103,16 +113,44 @@
     </div>
   {% endif %}
 
-  <button type="submit">Add to cart</button>
+  <!-- Add to cart button -->
+  <button
+    type="submit"
+    id="product-add-to-cart-button"
+    {% unless selectedProduct.available %}
+      disabled
+    {% endunless %}
+  >
+    {% if selectedProduct.available %}
+      Add To Cart
+    {% else %}
+      Out Of Stock
+    {% endif %}
+  </button>
+
+  <!-- Buy it now button -->
+  <button
+    type="submit"
+    id="product-buy-it-now-button"
+    {% unless selectedProduct.available %}
+      disabled
+    {% endunless %}
+  >
+    {% if selectedProduct.available %}
+      Buy It Now
+    {% else %}
+      Out Of Stock
+    {% endif %}
+  </button>
 {% endform %}
 
 {% comment %} {% render 'product' %} {% endcomment %}
 <script>
+  // Get the json product object from shopity product.liquid context
   let productJs = {{product | json}}
   // listener for different variant radio button change.
     document.querySelectorAll(".product-options input[type='radio']").forEach((radio) => {
       radio.addEventListener("change", () => {
-
         // find the selected options
         const selectedOptions = [];
         document.querySelectorAll(".product-options input[type='radio']:checked").forEach((checkedRadio) => {
@@ -122,7 +160,6 @@
         // find the matched variant .find(v=>{}) returns true if the variant is to be selected.
         const matchedVariant = productJs.variants.find((variant) => {
           let pass = true;
-
           for (let i=0; i<selectedOptions.length; i+=1) {
             if(selectedOptions.indexOf(variant.options[i]) === -1) {
               pass = false;
@@ -134,7 +171,6 @@
 
         // change hidden product-form variant id
         document.querySelector("#hidden-product-variant-input").value = matchedVariant.id;
-
         // update url without refreshing page,
         // so that we can share url with correct variant-id.
         const url = new URL(window.location.href);
@@ -159,7 +195,6 @@
         }
 
         // change featured image if selected variant has a featured image
-        console.log(matchedVariant.featured_image);
         if(matchedVariant.featured_image) {
           document.querySelector(".product-featured-image-container>img").setAttribute("src", matchedVariant.featured_image.src);
           document.querySelector(".product-thumb-container>img.selected").classList.remove("selected");
@@ -167,7 +202,25 @@
           document.querySelectorAll(".product-thumb-container>img")[matchedVariant.featured_image.position -1].classList.add("selected");
         }
 
-        console.log(matchedVariant);
+        // toggle button if selected variant is out of stock
+        const addToCart = document.getElementById("#product-add-to-cart-button");
+        const buyItNow = document.getElementById("#product-buy-it-now-button");
+
+        if(matchedVariant.available) {
+          addToCart.disabled = false;
+          addToCart.textContent = "Add To Cart";
+
+          buyItNow.disabled = false;
+          buyItNow.textContent = "Buy It Now";
+
+        }else {
+          addToCart.disabled = true;
+          addToCart.textContent = "Out Of Stock";
+
+          buyItNow.disabled = true;
+          buyItNow.textContent = "Out Of Stock";
+        }
+        // console.log(matchedVariant);
       });
     });
 
@@ -178,9 +231,28 @@
         document.querySelector(".product-thumb-container>img.selected").classList.remove("selected");
         // add selected class to new image
         img.classList.add("selected");
-
         document.querySelector(".product-featured-image-container>img").setAttribute("src", img.getAttribute("src"));
       });
+    });
+
+    /**
+     * To go straight to checkout form add a hidden input with name="return_to" and value="checkout"
+     * 1) listen click on Buy-It-Now button
+     * 2) prevent default submit
+     * 3) Append hidden checkout input to Shopify product form
+     * 4) Submit product form manually
+    */
+    document.getElementById("#product-buy-it-now-button").addEventListener("click", (e) => {
+      e.preventDefault();
+
+      const shopifyProductForm = document.querySelector(".shopify-product-form");
+      // <input type="hidden" name="return_to" value="/checkout/" /> add this hidden input to go straight to checkout page.
+      const hiddenCheckoutInput = document.createElement("input");
+      hiddenCheckoutInput.value = "/checkout";
+      hiddenCheckoutInput.name = "return_to";
+
+      shopifyProductForm.appendChild(hiddenCheckoutInput);
+      shopifyProductForm.submit();
     });
 </script>
 
