--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1,8 +1,2 @@
-body {
-  background-color: "{{settings.background-color}}";
-  color: "{{settings.text-color}}";
-}
-
-.hide {
-  display: none;
-}
+* { box-sizing: border-box; padding: 0; margin: 0; } html, body { height: 100%;
+font-family: 'Poppins', sans-serif; }
