search suggestion test

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -17,9 +17,9 @@
     </p>
   </form>
 </header>
-<div id="header-search-results">
-  <div id="header-search-suggestions"></div>
-  <div id="header-product-suggestions"></div>
+<div id='header-search-results'>
+  <div id='header-search-suggestions-container'></div>
+  <div id='header-product-suggestions-container'></div>
 </div>
 
 <style>
