--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,6 +1,12 @@
-<h1>Index template</h1>
-<h3>Inside {{ collections.frontpage.title }} collection</h3>
+{% comment %}
+  <h1>Index template</h1>
+  <h3>Inside {{ collections.frontpage.title }} collection</h3>
+{% endcomment %}
 <!-- rentered in product-item snippet. Accepts a product object -->
-{% for product in collections['test-collection'].products %}
-  {% render 'product-item', product: product %}
-{% endfor %}
+{% comment %}
+  {% for product in collections['test-collection'].products %}
+    {% render 'product-item', product: product %}
+  {% endfor %}
+{% endcomment %}
+
+{% render 'product-carousel-item', product: product %}
