--- a/snippets/product-carousel-item.liquid
+++ b/snippets/product-carousel-item.liquid
@@ -1,5 +1,5 @@
 <div class='w-full h-full bg-slate-50 flex justify-center items-center'>
-  <div class='w-full h-36 bg-yellow-100 flex items-center justify-center gap-x-2'>
+  <div class='w-full bg-yellow-100 flex items-center justify-center gap-x-2'>
     <div class='w-36 aspect-square bg-red-100'></div>
     <div class='w-36 aspect-square bg-red-100'></div>
     <div class='w-36 aspect-square bg-red-100'></div>
