--- a/assets/output.css
+++ b/assets/output.css
@@ -622,6 +622,10 @@ video {
   width: 200px;
 }
 
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
