--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -3,14 +3,16 @@
 {% paginate collection.products by 5 %}
   <hr>
   <br>
-  <select id="sort-by">
-    {% assign sort_by = collection.sort_by | default: collection.default_sort_by %}
+  <select id='sort-by'>
+    {% assign sort_by = collection.sort_by
+      | default: collection.default_sort_by
+    %}
 
     {% for option in collection.sort_options %}
       <option
-        value="{{ option.value }}"
+        value='{{ option.value }}'
         {% if option.value == sort_by %}
-          selected="selected"
+          selected='selected'
         {% endif %}
       >
         {{ option.name }}
@@ -21,6 +23,13 @@
   <br>
 
   {% for product in collection.products %}
+    {% assign discountPercentage = product.compare_at_price
+      | minus: product.price
+      | times: 100
+      | divided_by: product.compare_at_price
+      | round: 0
+    %}
+    <p>{{ discountPercentage }}</p>
     {% render 'product-item', product: product %}
   {% endfor %}
 
@@ -28,6 +37,9 @@
 {% endpaginate %}
 
 <!-- Javascript -->
+<!--
+  we have to update the url with sort_by=best-selling query param and refresh the page for sorting to work
+-->
 <script>
   Shopify.queryParams = {};
 
@@ -39,13 +51,14 @@
       var keyValue = params[i].split('=');
 
       if (keyValue.length) {
-        Shopify.queryParams[decodeURIComponent(keyValue[0])] = decodeURIComponent(keyValue[1]);
+        Shopify.queryParams[decodeURIComponent(keyValue[0])] =
+          decodeURIComponent(keyValue[1]);
       }
     }
   }
 
   // Update sort_by query parameter on select change
-  document.querySelector('#sort-by').addEventListener('change', function(e) {
+  document.querySelector('#sort-by').addEventListener('change', function (e) {
     var value = e.target.value;
 
     Shopify.queryParams.sort_by = value;
