product.js product.liquid

--- a/snippets/product-carousel-item.liquid
+++ b/snippets/product-carousel-item.liquid
@@ -1,6 +1,6 @@
 <div class='w-full h-full bg-slate-50 flex justify-center items-center'>
   <div class='w-full bg-yellow-100 flex items-center justify-center gap-x-2'>
-    <div class='max-w-xs aspect-square bg-red-100 p-2'>
+    <div class='min-w-[150px] max-w-xs aspect-square bg-red-100 p-2'>
       <div class="w-full aspect-square bg-inherit">
         <img
           class="w-full h-full"
