--- a/assets/output.css
+++ b/assets/output.css
@@ -622,6 +622,14 @@ video {
   width: 200px;
 }
 
+.min-w-\[\] {
+  min-width: ;
+}
+
+.min-w-\[150px\] {
+  min-width: 150px;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
