product.liquid styling test

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -294,8 +294,8 @@
       height="300"
     >
   {% endif %}
-  <div class="container mx-auto px-4">
-    <div id="product-thumb-{{ product.id | handle }}">
+  <div class="container mx-auto px-4 bg-red-400">
+    <div id="product-thumb-{{ product.id | handle }}" class="flex justify-center items-center">
       <h3>Thumbnail Images</h3>
       {% for image in product.images %}
         <img
