--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -295,8 +295,8 @@
     >
   {% endif %}
   <div class="container mx-auto px-4 bg-red-400">
-    <div id="product-thumb-{{ product.id | handle }}" class="flex justify-center items-center">
-      <h3>Thumbnail Images</h3>
+    <h3>Thumbnail Images</h3>
+    <div id="product-thumb-{{ product.id | handle }}" class="flex justify-center items-center flex-wrap">
       {% for image in product.images %}
         <img
           width="200"
