--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,49 +1,61 @@
-<div style="padding: 30px">
+<div style='padding: 30px'>
   {% assign selectedVariant = product.selected_or_first_available_variant %}
 
   {% if selectedVariant.featured_image %}
     {% assign featuredImage = selectedVariant.featured_image %}
     <img
-      id="product-featured-image-{{product.id |  handleize}}"
-      src="{{ selectedVariant.featured_image | image_url }}"
-      width="300"
-      height="300">
+      id='product-featured-image-{{product.id |  handleize}}'
+      src='{{ selectedVariant.featured_image | image_url }}'
+      width='300'
+      height='300'
+    >
   {% else %}
     {% assign featuredImage = product.featured_image %}
     <img
-      id="product-featured-image-{{product.id |  handleize}}"
-      src="{{ product.featured_image | image_url }}"
-      width="300"
-      height="300">
+      id='product-featured-image-{{product.id |  handleize}}'
+      src='{{ product.featured_image | image_url }}'
+      width='300'
+      height='300'
+    >
   {% endif %}
-  <div class="container mx-auto px-4 bg-red-400">
+  <div class='container mx-auto px-4 bg-red-400'>
     <h3>Thumbnail Images</h3>
-    <div id="product-thumb-{{ product.id | handle }}" class="flex justify-center items-center flex-wrap">
+    <div
+      id='product-thumb-{{ product.id | handle }}'
+      class='flex justify-center items-center flex-wrap'
+    >
       {% for image in product.images %}
         <img
-          width="200"
-          height="200"
-          src="{{image |  image_url }}"
-          class="
-        {% if image == featuredImage %}
-          selected
-        {% endif %}">
+          width='200'
+          height='200'
+          src='{{image |  image_url }}'
+          class='
+            {% if image == featuredImage %}
+              selected
+            {% endif %}
+          '
+        >
       {% endfor %}
     </div>
   </div>
-  <h1 id="product-title-{{product.id |  handleize}}">
+  <h1 id='product-title-{{product.id |  handleize}}'>
     {{ selectedVariant.title }}
   </h1>
-  <p id="product-vendor-{{product.id |  handleize}}">{{ product.vendor }}</p>
+  <p id='product-vendor-{{product.id |  handleize}}'>{{ product.vendor }}</p>
 
-  <div class="product-price-container">
-    <p id="product-price-{{product.id |  handleize}}" class="product.price">
+  <div class='product-price-container'>
+    <p id='product-price-{{product.id |  handleize}}' class='product.price'>
       Price:
       <strong>{{ selectedVariant.price | money_with_currency }}</strong>
     </p>
 
-    {% if selectedVariant.compare_at_price and selectedVariant.compare_at_price > selectedVariant.price %}
-      <p id="product-compare-at-price-{{product.id |  handleize}}" class="product.price">
+    {% if selectedVariant.compare_at_price
+      and selectedVariant.compare_at_price > selectedVariant.price
+    %}
+      <p
+        id='product-compare-at-price-{{product.id |  handleize}}'
+        class='product.price'
+      >
         Compare At Price:
         <strong>
           {{- selectedVariant.compare_at_price | money_with_currency -}}
@@ -52,42 +64,53 @@
     {% endif %}
   </div>
 
-  <label for="product-quantity-input-{{product.id |  handleize}}">Product Quantity</label>
-  <div style="display: flex; justify-content: flex-start; align-items: center;">
+  <label for='product-quantity-input-{{product.id |  handleize}}'
+    >Product Quantity</label
+  >
+  <div style='display: flex; justify-content: flex-start; align-items: center;'>
     <button
-      style="padding: 10px; background-color: gray;"
-      type="button"
-      id="product-quantity-plus-{{product.id |  handleize}}">
+      style='padding: 10px; background-color: gray;'
+      type='button'
+      id='product-quantity-plus-{{product.id |  handleize}}'
+    >
       Increment
     </button>
     <input
-      type="text"
-      id="product-quantity-input-{{product.id |  handleize}}"
-      aria-describedby="hint"
-      inputmode="numeric"
-      pattern="[0-9]*">
+      type='text'
+      id='product-quantity-input-{{product.id |  handleize}}'
+      aria-describedby='hint'
+      inputmode='numeric'
+      pattern='[0-9]*'
+    >
     <button
-      style="padding: 10px; background-color: gray;"
-      type="button"
-      id="product-quantity-minus-{{product.id |  handleize}}">
+      style='padding: 10px; background-color: gray;'
+      type='button'
+      id='product-quantity-minus-{{product.id |  handleize}}'
+    >
       Decrement
     </button>
   </div>
 
   {% if product.variants.size > 1 %}
-    <div id="product-variant-radio-group-{{product.id |  handleize}}" class="product-variant-radio-group">
+    <div
+      id='product-variant-radio-group-{{product.id |  handleize}}'
+      class='product-variant-radio-group'
+    >
       {% for option in product.options_with_values -%}
         <fieldset>
           <legend>{{ option.name }}</legend>
 
           {% for value in option.values %}
             <input
-              {% if option.selected_value == value %}checked{% endif %}
-              type="radio"
-              name="{{ option.name }}"
-              value="{{ value }}"
-              id="{{ option.name | handleize }}-{{ value | handleize }}-{{product.id |  handleize}}">
-            <label for="{{ option.name | handleize }}-{{ value | handleize }}-{{product.id |  handleize}}">
+              {% if option.selected_value == value %}
+                checked
+              {% endif %}
+              type='radio'
+              name='{{ option.name }}'
+              value='{{ value }}'
+              id='{{ option.name | handleize }}-{{ value | handleize }}-{{product.id |  handleize}}'
+            >
+            <label for='{{ option.name | handleize }}-{{ value | handleize }}-{{product.id |  handleize}}'>
               {{- value -}}
             </label>
           {% endfor %}
@@ -98,10 +121,13 @@
 
   <!-- Add to cart button -->
   <button
-    style="padding: 10px; background-color: gray;"
-    type="submit"
-    id="product-add-to-cart-button"
-    {% unless selectedVariant.available %}disabled{% endunless %}>
+    style='padding: 10px; background-color: gray;'
+    type='submit'
+    id='product-add-to-cart-button'
+    {% unless selectedVariant.available %}
+      disabled
+    {% endunless %}
+  >
     {% if selectedVariant.available %}
       Add To Cart
     {% else %}
@@ -111,10 +137,13 @@
 
   <!-- Buy it now button -->
   <button
-    style="padding: 10px; background-color: gray;"
-    type="submit"
-    id="product-buy-it-now-button"
-    {% unless selectedVariant.available %}disabled{% endunless %}>
+    style='padding: 10px; background-color: gray;'
+    type='submit'
+    id='product-buy-it-now-button'
+    {% unless selectedVariant.available %}
+      disabled
+    {% endunless %}
+  >
     {% if selectedVariant.available %}
       Buy It Now
     {% else %}
@@ -125,7 +154,8 @@
 
 <script>
   $(document).ready(() => {
-    $('#product-thumb-  {{ product.id | handle }}').slick({
+    console.log($('product-thumb-{{ product.id | handle }}'));
+    $('product-thumb-{{ product.id | handle }}').slick({
       dots: true,
       infinite: false,
       speed: 300,
@@ -139,14 +169,14 @@
           settings: {
             slidesToShow: 4,
             slidesToScroll: 4,
-          }
-        }
-      ]
+          },
+        },
+      ],
     });
   });
 </script>
 
-<script src="{{" product.js" | asset_url}}" defer></script>
+<script src='{{" product.js" | asset_url}}' defer></script>
 <script>
   $(document).ready(function() {
     productJs.setProduct({{ product | json}});
