--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -18,17 +18,17 @@
       height='300'
     >
   {% endif %}
-  <div class='container mx-auto px-4 bg-red-400'>
+  <div class='container h-96 mx-auto px-4 bg-red-400'>
     <h3>Thumbnail Images</h3>
     <div
+      class='w-full h-full bg-red-200'
       id='product-thumb-{{ product.id | handle }}'
     >
       {% for image in product.images %}
         <img
-          width='200'
-          height='200'
           src='{{image |  image_url }}'
           class='
+            aspect-square
             {% if image == featuredImage %}
               selected
             {% endif %}
