--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -19,9 +19,9 @@
     >
   {% endif %}
   <h3>Thumbnail Images</h3>
-  <div class='container h-52 mx-auto px-4 bg-red-400'>
+  <div class='relative container h-52 mx-auto px-4 bg-red-400'>
     <div
-      class='relative w-full h-full bg-pink-400'
+      class='w-full h-full bg-pink-400'
       id='product-thumb-{{ product.id | handle }}'
     >
       {% for image in product.images %}
