--- a/assets/output.css
+++ b/assets/output.css
@@ -578,13 +578,29 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .sticky {
   position: sticky;
+}
+
+.top-\[50\%\] {
+  top: 50%;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.ml-\[100\%\] {
+  margin-left: 100%;
+}
+
+.mr-\[100\%\] {
+  margin-right: 100%;
 }
 
 .block {
@@ -607,6 +623,10 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
 .h-\[500px\] {
   height: 500px;
 }
@@ -615,16 +635,8 @@ video {
   height: 100%;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-52 {
-  height: 13rem;
+.h-4 {
+  height: 1rem;
 }
 
 .w-36 {
@@ -635,6 +647,10 @@ video {
   width: 100%;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .min-w-\[150px\] {
   min-width: 150px;
 }
@@ -643,8 +659,16 @@ video {
   max-width: 20rem;
 }
 
+.flex-grow {
+  flex-grow: 1;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -668,8 +692,18 @@ video {
   border-width: 1px;
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .bg-inherit {
   background-color: inherit;
+}
+
+.bg-pink-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
 }
 
 .bg-red-100 {
@@ -692,9 +726,14 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
-.bg-red-200 {
+.bg-blue-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
 .p-2 {
