--- a/assets/output.css
+++ b/assets/output.css
@@ -741,6 +741,11 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
+.bg-blue-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
