--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -22,7 +22,7 @@
   <h3>Thumbnail Images</h3>
   <div class='relative container h-52 flex justify-center items-center mx-auto px-4 bg-red-400'>
     <button
-      class='w-4 bg-blue-50'
+      class='w-4 bg-blue-50 flex justify-center items-center'
       type='button'
       id='slick-prev-btn-{{product.id | handle}}'
     >
@@ -38,7 +38,7 @@
       <div class='slick-dots-container h-4 w-full bg-green-400'></div>
     </div>
     <button
-      class='w-4 bg-blue-50'
+      class='w-4 bg-blue-50 flex justify-center items-center'
       type='button'
       id='slick-next-btn-{{product.id | handle}}'
     >
