--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -26,15 +26,28 @@
       type='button'
       id='slick-prev-btn-{{product.id | handle}}'
     >
-      <
+      Prev
     </button>
     <div
       class='flex-grow h-full flex flex-col justify-center items-center bg-pink-400'
     >
       <div
         id='product-thumb-{{ product.id | handle }}'
-        class='w-full flex-grow bg-blue-200'
-      ></div>
+        class='w-full flex-grow flex justify-center items-center flex-wrap bg-blue-200'
+      >
+        {% for image in product.images %}
+          <img
+            width='200'
+            height='200'
+            src='{{image |  image_url }}'
+            class='
+              {% if image == featuredImage %}
+                selected
+              {% endif %}
+            '
+          >
+        {% endfor %}
+      </div>
       <div class='slick-dots-container h-4 w-full bg-green-400'></div>
     </div>
     <button
@@ -42,7 +55,7 @@
       type='button'
       id='slick-next-btn-{{product.id | handle}}'
     >
-      >
+      Next
     </button>
   </div>
 
