--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -20,7 +20,7 @@
   {% endif %}
 
   <h3>Thumbnail Images</h3>
-  <div class='relative container h-52 flex justify-center items-center mx-auto px-4 bg-red-400'>
+  <div class='relative container flex justify-center items-center mx-auto px-4 bg-red-400'>
     <button
       class='w-4 bg-blue-50 flex justify-center items-center'
       type='button'
