--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,6 +1,6 @@
 <div style='padding: 30px'>
   {% assign selectedVariant = product.selected_or_first_available_variant %}
-
+  {{ selectedVariant | json }}
   {% if selectedVariant.featured_image %}
     {% assign featuredImage = selectedVariant.featured_image %}
     <img
@@ -19,6 +19,11 @@
     >
   {% endif %}
 
+  {% if product.variants.size > 1 %}
+    {% assign variantAltText = "Group-{{selectedVariant.options[0]}}" %}
+  {% endif %}
+
+  {{ variantAltText }}
   <h3>Thumbnail Images</h3>
   <div
     id='product-thumb-container-{{product.id|handle}}'
